--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/native-stack": "^6.9.7",
     "react": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-dropdown-picker": "^5.4.4",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2"
   },
