--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-native": "0.68.2",
     "react-native-dropdown-picker": "^5.4.4",
     "react-native-safe-area-context": "^4.4.1",
-    "react-native-screens": "^3.18.2"
+    "react-native-screens": "^3.18.2",
+    "react-native-virtualized-view": "^1.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.5",
