--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "17.0.2",
     "react-native": "0.68.2",
     "react-native-dropdown-picker": "^5.4.4",
+    "react-native-image-picker": "^4.10.3",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
     "react-native-virtualized-view": "^1.0.0"
