--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "@react-navigation/native-stack": "^6.9.7",
     "react": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-deck-swiper": "^2.0.12",
     "react-native-dropdown-picker": "^5.4.4",
     "react-native-image-picker": "^4.10.3",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
+    "react-native-vector-icons": "^9.2.0",
     "react-native-virtualized-view": "^1.0.0"
   },
   "devDependencies": {
